added stylesheet to center text

--- a/views/boss.erb
+++ b/views/boss.erb
@@ -1,3 +1,4 @@
+<head><link rel="stylesheet" type="text/css" href="/styles.css"></head>
 <h1>Angry Boss</h1>
 <form action="boss" method="post">
   Input:
