--- a/views/show_message.erb
+++ b/views/show_message.erb
@@ -1,1 +1,2 @@
+<head><link rel="stylesheet" type="text/css" href="/styles.css"></head>
 <h1>WHAT DO YOU MEAN '<%= message.upcase %>'??? YOU'RE FIRED!!</h1> 
