--- a/views/rps.erb
+++ b/views/rps.erb
@@ -1,3 +1,5 @@
+<head><link rel="stylesheet" type="text/css" href="/styles.css"></head>
+
 <h1>Rock, Paper, Scissors!</h1>
 <form action="rps" method="post">
   Enter 'rock', 'paper', or 'scissors':
