Added redirect for bad input, utilized instance variables instead of passing them in as locals

--- a/views/rps_result.erb
+++ b/views/rps_result.erb
@@ -1,3 +1,3 @@
 <head><link rel="stylesheet" type="text/css" href="/styles.css"></head>
 <h1>Results!</h1>
-<p>You selected <%= human_move %> and the computer selected <%= computer_move %>. <%= result %></p>
+<p>You selected <%= @my_move %> and the computer selected <%= @comp_move %>. <%= result %></p>
